--- a/Base-Frontend/static/styles/index.css
+++ b/Base-Frontend/static/styles/index.css
@@ -1,10 +1,22 @@
-body{
+.button-style{
+    cursor: pointer;
+    width: 340px;
+    padding: 20px;
+    border-radius: 4px;
+    border: 4px solid #676a6c;
     background: #E3E5E7;
+    font-size: 32px;
+    color: black;
 }
-.index-title{
-    font-family: sans-serif;
+.page-font{
+    font-family: cursive;
+    font-weight: lighter;
+}
+.button-style:hover{
+    transition: 0.4s;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.justify-center{
     display: flex;
     justify-content: center;
-    font-size: 32px;
-    color: #676a6c;
 }
