--- a/Base-Frontend/static/styles/index.css
+++ b/Base-Frontend/static/styles/index.css
@@ -4,7 +4,7 @@
     padding: 20px;
     border-radius: 4px;
     border: 4px solid #676a6c;
-    background: #E3E5E7;
+    background: #f4ecd0;
     font-size: 32px;
     color: black;
 }
@@ -29,14 +29,26 @@
     justify-content: space-around;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 10px;
-    padding: 5px;
+.row {
+    display: flex
 }
-.grid-container > div {
+.col{
+    flex: 50%;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    padding: 10px 0;
-    font-size: 30px;
+}
+
+.col-3{
+    float: left;
+    width: 33.33%;
+}
+
+.tutorial-div{
+    background: #f4ecd0;
+    border-radius: 4px;
+    border: 4px solid #676a6c;
+    width: 500px;
+    text-align: left;
+    padding: 5px;
 }
